# AuScope-instrument-registry

./: .env.dev  .env.example  .gitignore  AWS_VM_dev_server.md  README.md  README_TAXONOMY.md  check-analytics-setup.sh  docker-compose.dev.yml  docker-compose.yml  test-analytics-events.sh
ckan/src/ckanext-pidinst-theme/: ANALYTICS_SETUP.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  test.ini
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/: analytics.py  analytics_views.py  cli.py  doi_policy.py  facility_schema.yaml  helpers.py  instrument_organization_schema.yaml  instrument_schema.yaml  party_cache.py  party_propagation.py  party_schema.yaml  plugin.py  propagation_helpers.py  relation_sync.py  taxonomy_protection.py  views.py
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/assets/: webassets.yml
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/assets/css/: base.css  components.css  pages.css  pidinst_theme.css  shared_style.css  tokens.css
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/assets/js/: analytics-tracking.js  composite-repeating-module.js  composite-repeating.js  cover-photo-module.js  datatable-module.js  doi-resolve-module.js  doi-resolve-module.test.js  duplicate-of-module.js  facet-checkboxes-module.js  facet-collapse-module.js  facility-tree-module.js  jstree-view-module.js  (+20 more)
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/doi_resolution/: __init__.py  input_normalizer.py  mapper.py  providers.py  resolver.py  types.py  url_metadata_client.py
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/logic/: action.py  auth.py  batch_process.py  batch_validation.py  doi_reconciliation.py  email_notifications.py  schema.py  validators.py
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/scheming/: validation.py
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/templates/: base.html  footer.html  header.html
ckan/src/ckanext-pidinst-theme/ckanext/pidinst_theme/tests/: test_analytics.py  test_form_snippets.py  test_helpers.py  test_plugin.py  test_views.py
ckan_batch/: README.md  pyproject.toml  setup.cfg
ckan_batch/notebooks/: Untitled.ipynb  ckanapi-batch.ipynb  ckanapi-client.ipynb  copy-data-between-instances.ipynb  pidinst-batch-create.ipynb  pidinst-batch-update.ipynb
ckan_batch/src/ckan_batch/: __init__.py  client.py  constants.py  helpers.py
ckan_batch/src/ckan_batch/reader/: pidinst.py
ckan_batch/src/ckan_batch/reader/templates/: PIDINST.xlsx  PIDINST_Example.xlsx  pidinst-batch-create.ipynb  pidinst-batch-update.ipynb
(+137 files in other folders)
